--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
   </head>
 
   <body>
@@ -14,7 +16,8 @@
 	      <a href="/" class="brand-logo">Post</a>
 	      <ul id="nav-mobile" class="right hide-on-med-and-down">
 	        <li>
-          <%= link_to 'New publication',post_new_path %>
+          </li>
+
 	      </ul>
 	    </div>
 	  </nav>
