--- a/app/views/post/new.html.erb
+++ b/app/views/post/new.html.erb
@@ -1,22 +1,2 @@
-<h1>foca</h1>
 
-`<%= form_for  :post, :url => { :action => :create } do |f| %>
-
-	<p>		
-		<%= f.label :title %> <br>
-		<%=  f.text_field :title, placeholder: 'title' %>	
-	</p>
-
-	<p>
-		<%= f.label :text %> <br>		
-		<%= f.text_area :text, placeholder: 'text area' %>
-	</p>
-
-	 <%= f.submit %>
-
-<% end %>
-
-
-
-
-
+<%= render 'postform' %>
